# bzlmod-http_archive

./: MODULE.bazel  README.md  WORKSPACE  libevent.BUILD.bazel
